Start moving metalava build logic into a plugin
This is in preparation of splitting metalava into several libraries

Test: ./gradlew -> still passes
Change-Id: Id4567a9aa99a00581b9a52ad508e76372f0b3791