@@ -1,13 +1,8 @@
 import com.android.tools.metalava.CREATE_ARCHIVE_TASK
 import com.android.tools.metalava.CREATE_BUILD_INFO_TASK
-import com.android.tools.metalava.configureBuildInfoTask
-import com.android.tools.metalava.configureKtfmt
-import com.android.tools.metalava.configurePublishingArchive
 import java.io.FileInputStream
 import java.io.FileNotFoundException
 import java.util.Properties
-import org.gradle.api.tasks.testing.logging.TestLogEvent
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 /** Take a copy of the original [buildDir] for use by [testPrebuiltsSdkDir] */
 val originalBuildDir = buildDir
@@ -35,34 +30,17 @@ repositories {
 }
 
 plugins {
-    alias(libs.plugins.kotlinJvm)
-    id("com.android.lint") version "8.2.0-alpha08"
     id("application")
-    id("java")
+    id("org.jetbrains.kotlin.jvm")
     id("maven-publish")
+    id("metalava-build-plugin")
 }
-
-group = "com.android.tools.metalava"
 
 version = getMetalavaVersion()
 
 application {
     mainClass.set("com.android.tools.metalava.Driver")
     applicationDefaultJvmArgs = listOf("-ea", "-Xms2g", "-Xmx4g")
-}
-
-java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
-}
-
-tasks.withType(KotlinCompile::class.java) {
-    kotlinOptions {
-        jvmTarget = "17"
-        apiVersion = "1.7"
-        languageVersion = "1.7"
-        allWarningsAsErrors = true
-    }
 }
 
 val customLintVersion = findProperty("lintVersion") as String?
@@ -97,12 +75,6 @@ dependencies {
     testImplementation("com.google.truth:truth:1.1.3")
     testImplementation(libs.kotlinTest)
 }
-
-val zipTask: TaskProvider<Zip> =
-    project.tasks.register("zipTestResults", Zip::class.java) {
-        destinationDirectory.set(File(getDistributionDirectory(), "host-test-reports"))
-        archiveFileName.set("metalava-tests.zip")
-    }
 
 /**
  * The location into which a fake representation of the prebuilts/sdk directory will be written.
@@ -190,26 +162,10 @@ project.tasks.register("test-prebuilts-sdk") {
     dependsOn("test-sdk-extensions-info.xml")
 }
 
-val testTask = tasks.named("test", Test::class.java)
-
-testTask.configure {
+tasks.named<Test>("test").configure {
     dependsOn("test-prebuilts-sdk")
     setEnvironment("METALAVA_TEST_PREBUILTS_SDK_ROOT" to testPrebuiltsSdkDir)
-    jvmArgs = listOf("--add-opens=java.base/java.lang=ALL-UNNAMED")
-    maxParallelForks = (Runtime.getRuntime().availableProcessors() / 2).takeIf { it > 0 } ?: 1
-    testLogging.events =
-        hashSetOf(
-            TestLogEvent.FAILED,
-            TestLogEvent.PASSED,
-            TestLogEvent.SKIPPED,
-            TestLogEvent.STANDARD_OUT,
-            TestLogEvent.STANDARD_ERROR
-        )
-    if (isBuildingOnServer()) ignoreFailures = true
-    finalizedBy(zipTask)
 }
-
-zipTask.configure { from(testTask.map { it.reports.junitXml.outputLocation.get() }) }
 
 fun getMetalavaVersion(): Any {
     val versionPropertyFile = File(projectDir, "src/main/resources/version.properties")
@@ -232,108 +188,3 @@ fun getBuildDirectory(): File {
         File(projectDir, "../../out/metalava")
     }
 }
-
-/**
- * The build server will copy the contents of the distribution directory and make it available for
- * download.
- */
-fun getDistributionDirectory(): File {
-    return if (System.getenv("DIST_DIR") != null) {
-        File(System.getenv("DIST_DIR"))
-    } else {
-        File(projectDir, "../../out/dist")
-    }
-}
-
-fun isBuildingOnServer(): Boolean {
-    return System.getenv("OUT_DIR") != null && System.getenv("DIST_DIR") != null
-}
-
-/**
- * @return build id string for current build
- *
- * The build server does not pass the build id so we infer it from the last folder of the
- * distribution directory name.
- */
-fun getBuildId(): String {
-    return if (System.getenv("DIST_DIR") != null) File(System.getenv("DIST_DIR")).name else "0"
-}
-
-val publicationName = "Metalava"
-val repositoryName = "Dist"
-
-publishing {
-    publications {
-        create<MavenPublication>(publicationName) {
-            from(components["java"])
-            pom {
-                licenses {
-                    license {
-                        name.set("The Apache License, Version 2.0")
-                        url.set("http://www.apache.org/licenses/LICENSE-2.0.txt")
-                    }
-                }
-                developers { developer { name.set("The Android Open Source Project") } }
-                scm {
-                    connection.set(
-                        "scm:git:https://android.googlesource.com/platform/tools/metalava"
-                    )
-                    url.set("https://android.googlesource.com/platform/tools/metalava/")
-                }
-            }
-        }
-    }
-
-    repositories {
-        maven {
-            name = repositoryName
-            url = uri("file://${getDistributionDirectory().canonicalPath}/repo/m2repository")
-        }
-    }
-}
-
-lint {
-    fatal.add("UastImplementation")
-    disable.add("UseTomlInstead") // not useful for this project
-    disable.add("GradleDependency") // not useful for this project
-    abortOnError = true
-    baseline = File("lint-baseline.xml")
-}
-
-configureKtfmt()
-
-// Add a buildId into Gradle Metadata file so we can tell which build it is from.
-tasks.withType(GenerateModuleMetadata::class.java).configureEach {
-    val outDirProvider = project.providers.environmentVariable("DIST_DIR")
-    inputs.property("buildOutputDirectory", outDirProvider).optional(true)
-    doLast {
-        val metadata = outputFile.asFile.get()
-        val text = metadata.readText()
-        val buildId = outDirProvider.orNull?.let { File(it).name } ?: "0"
-        metadata.writeText(
-            text.replace(
-                """"createdBy": {
-    "gradle": {""",
-                """"createdBy": {
-    "gradle": {
-      "buildId:": "$buildId",""",
-            )
-        )
-    }
-}
-
-val archiveTaskProvider =
-    configurePublishingArchive(
-        project,
-        publicationName,
-        repositoryName,
-        getBuildId(),
-        getDistributionDirectory()
-    )
-
-configureBuildInfoTask(
-    project,
-    isBuildingOnServer(),
-    getDistributionDirectory(),
-    archiveTaskProvider
-)
